objects/Chat_Conversation__c/Chat_Conversation__c.object-meta.xml
<CustomObject>
    <label>Chat Conversation</label>
    <nameField>
        <displayFormat>CON-{0000}</displayFormat>
        <label>Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>