objects/Chat_Conversation__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>