objects/Chat_Conversation__c/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Conversation ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>